--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "mocha ./src/**/*.spec.js"
+    "test": "mocha ./src/**/specs/**"
   },
   "keywords": [],
   "author": "",
