--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "mocha ./src/**/*.spec.js"
+    "test": "nyc mocha ./src/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
+    "nyc": "^13.1.0",
     "sinon": "^7.1.1"
   }
 }
