--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "joi": "^14.1.0",
     "ramda": "^0.26.0"
   },
   "devDependencies": {
